<resources>
    <string name="app_name">Alertz</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="retypepwd">Enter password again</string>
    <string name="email">email address</string>
</resources>
